# kalibr-assetcool

./: aprilgrid_4x4.yaml  video2bag.py
zed_config_export/: CMakeLists.txt  README.md  package.xml
